	  reduction in memory usage with files that contain a
	  lot of in-line images.
	- Now use the long names for the Flate and DCT filters
	  in all non-inline PDF streams.  This avoids a stupid
	  bug in Acrobat Reader when printing to PostScript
	  printers.
	- HTMLDOC now strips any trailing GET query information
	  when saving the start of files (target) in a document.

    BUG FIXES

	- If a document started with a heading greater than H1,
	  HTMLDOC would crash.
	- Full justification would incorrectly be applied to
	  text ending with a break.
	- Images using ALIGN="MIDDLE" were not centered properly
	  on the baseline.


CHANGES IN HTMLDOC v1.8.14

    NEW FEATURES

	- Added support for 128-bit encryption.
	- Added support for GET form request data in the PHP and
	  Java "portal" examples.

    CHANGES

	- Most output generation limits have been removed;
	  HTMLDOC now dynamically allocates memory as needed for
	  pages, images, headings, and links.  This has the
	  happy side-effect of reducing the initial memory
	  footprint significantly.
	- Now call setlocale() when it is available to localize
	  the date and time in the output.
	- The table parsing code now checks to see that a
	  ROWSPAN attribute fits in the table; e.g., a ROWSPAN
	  of 10 for a table that has only 6 rows remaining needs
	  to be reduced to 6...

    BUG FIXES

	- Tables with a lot of COLSPANs could cause a divide-
	  by-zero error or bad pages (NAN instead of a number.)
	- Table cells with a single render element would not be
	  vertically aligned.
	- The --quiet option would enable progress messages on
	  the command-line.
	- Table cell widths could be computed incorrectly,
	  causing unnecessary wrapping.
	- The --path option disabled checking for the file
	  with the original filename.


CHANGES IN HTMLDOC v1.8.13

    NEW FEATURES

	- Added support for secure (https) URLs via the OpenSSL
	  library.
	- Added support for Acrobat 5.0 (PDF 1.4).